--- a/Main/index.html
+++ b/Main/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+ <!----> TEST <!---->
   <head>
   
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   <body>
   
     <section class = "ofirmie">O FIRMIE</section>
-    
+
     <section class = "produkty">PRODUKTY</section>
 
     <section class = "partnerzy">PARTNERZY</section>
