--- a/Poznaj Nas/poznajnas.html
+++ b/Poznaj Nas/poznajnas.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src = "./images/aboutus.png">
-
+    <!-- test -->
     <img src = "./images/aboutus2.png">
 </body>
 </html>
