--- a/Poznaj Nas/poznajnas.html
+++ b/Poznaj Nas/poznajnas.html
@@ -10,6 +10,7 @@
 <body>
     <img src = "./images/aboutus.png">
     <!-- test -->
+    <!-- test -->
     <img src = "./images/aboutus2.png">
 </body>
 </html>
