basic slider added

--- a/Main/index.html
+++ b/Main/index.html
@@ -7,10 +7,34 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script
+    src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-de7e2ef6bfefd24b79a3f68b414b87b8db5b08439cac3f1012092b2290c719cd.js">
+  </script>
+  <script src="script.js"></script>
 
 </head>
 
+
 <body>
+
+  <div id="slider">
+    <a href="#" class="control_next">></a>
+    <a href="#" class="control_prev">
+      <</a> <ul>
+        <li style="background-image: url(./Pictures/background1.png);">SLIDE 1</li>
+        <li style="background: #aaa;">SLIDE 2</li>
+        <li>SLIDE 3</li>
+        <li style="background: #aaa;">SLIDE 4</li>
+        </ul>
+  </div>
+
+  <div class="slider_option">
+    <input type="checkbox" id="checkbox">
+    <label for="checkbox">Autoplay Slider</label>
+  </div>
+
+
 
 
 </body>
