--- a/Main/index.html
+++ b/Main/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,18 @@
     <a href="#" class="control_next">></a>
     <a href="#" class="control_prev">
       <</a> <ul>
-        <li style="background-image: url(./Pictures/background1.png);">SLIDE 1</li>
+        <li style="background-image: url(./Pictures/background1.png);">
+          <div class="sliderContainer">
+            <div class="sliderTitle">MIGRATING TO SQL?
+            </div>
+            <div class="sliderText">If you are going to migrate or rewrite your application to use SQL database you
+              definitely need to read about our Mediator ISAM Server.
+            </div>
+
+            <button class="sliderButton">READ MORE
+            </button>
+          </div>
+        </li>
         <li style="background: #aaa;">SLIDE 2</li>
         <li>SLIDE 3</li>
         <li style="background: #aaa;">SLIDE 4</li>
