--- a/Main/index.html
+++ b/Main/index.html
@@ -18,6 +18,38 @@
 
 <body>
 
+  <header>
+    <div id="rect">
+    </div>
+    <div class="logo">
+      <img src="./Pictures/otclogo.svg" alt="logo" />
+    </div>
+    <div id="rect2">
+      <ul id="nav_links">
+        <li class="link"><a href="#">
+            <div class="supButton">ABOUT US</div>
+          </a></li>
+        <li class="link"><a href="#">
+            <div class="supButton">PRODUCTS</div>
+          </a></li>
+        <li class="link"><a href="#">
+            <div class="supButton">PARTNERS</div>
+          </a></li>
+        <a href="#">
+          <li class="link">
+            <div class="supButton">HELP</div>
+        </a></li>
+        <li class="link"><a href="#">
+            <div class="supButton">DOWNLOAD</div>
+          </a></li>
+        <li class="link">
+          <div class="supButton">GET IN TOUCH</div>
+        </li>
+      </ul>
+    </div>
+
+  </header>
+
   <div id="slider">
     <a href="#" class="control_next">></a>
     <a href="#" class="control_prev">
