--- a/Main/index.html
+++ b/Main/index.html
@@ -54,7 +54,7 @@
     <a href="#" class="control_next">></a>
     <a href="#" class="control_prev">
       <</a> <ul>
-        <li style="background-image: url(./Pictures/background1.png);">
+        <li style="background-image: url(./Pictures/background1.png); background-size: cover;">
           <div class="sliderContainer">
             <div class="sliderTitle">MIGRATING TO SQL?
             </div>
