added whoweare section

--- a/Main/index.html
+++ b/Main/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,7 +62,7 @@
               definitely need to read about our Mediator ISAM Server.
             </div>
 
-            <button class="sliderButton">READ MORE
+            <button class="baseButton">READ MORE
             </button>
           </div>
         </li>
@@ -72,11 +72,22 @@
         </ul>
   </div>
 
-  <div class="slider_option">
-    <input type="checkbox" id="checkbox">
-    <label for="checkbox">Autoplay Slider</label>
-  </div>
+  <div id="whoWeAre">
+    <div class="sectionTitle">
+      WHO WE ARE
+    </div>
+    <div id="aboutus">
+      OTC S.A. company was founded in 1995 by employees of IT and Telecommunication Department of the University of
+      Science and Technology in Cracow. From the beginning of its activities, it has been specializing in creating
+      software tools for relational databases and xBase compilers. The main area of its activity is providing solutions
+      which would enable migration to new, safe and effective technologies for everyone who develops and uses
+      applications written in Borland Delphi, CA-Clipper, Harbour or xHarbour.
+    </div>
 
+    <div class="baseButton">
+      TALK TO OUR TEAM
+    </div>
+  </div>
 
 
 
