--- a/Main/index.html
+++ b/Main/index.html
@@ -88,6 +88,11 @@
       TALK TO OUR TEAM
     </div>
   </div>
+  <div id="products">
+    <div id="productContainer">
+      
+    </div>
+  </div>
 
 
   <script src="https://skrypt-cookies.pl/id/ee83d620f1f50089.js"></script>
