updating products section

--- a/Main/index.html
+++ b/Main/index.html
@@ -89,6 +89,9 @@
     </div>
   </div>
   <div id="products">
+    <div class="sectionTitle">
+      WHAT WE OFFER
+    </div>
     <div id="productContainer">
       
     </div>
