updating products.scss

--- a/Main/index.html
+++ b/Main/index.html
@@ -93,7 +93,8 @@
       WHAT WE OFFER
     </div>
     <div id="productContainer">
-      
+      <div id="containerTitle"></div>
+
     </div>
   </div>
 
