--- a/Main/index.html
+++ b/Main/index.html
@@ -92,8 +92,15 @@
     <div class="sectionTitle">
       WHAT WE OFFER
     </div>
+
+    <div id="containerTable">
+      <div class="containerOption">MEDIATOR</div>
+      <div class="containerOption">TERMINAL</div>
+      <div class="containerOption">WINFLECTOR</div>
+    </div>
+
     <div id="productContainer">
-      <div id="containerTitle"></div>
+
 
     </div>
   </div>
