--- a/Main/index.html
+++ b/Main/index.html
@@ -100,13 +100,22 @@
     </div>
 
     <div id="productContainer">
-
-
+      <div id="productInfo">
+        <img id="containerPhoto" src=".\images\mediator.png">
+        <div id="productDescription">Would you like your application written in Delphi, Clipper, Harbour, or xHarbour
+          start
+          to work with the SQL database in an almost magical way? What is more, do you want it to happen in no time and
+          without any effort from your side? If the answer is yes, you have found the right solution - Mediator ISAM
+          server.
+          Mediator has been created in order to provide a fast and unproblematic migration from the obsolete data
+          technologies such as DBF to SQL which is becoming a standard.</div>
+      </div>
+      <button class="baseButton">READ MORE
+      </button>
     </div>
   </div>
-
-
-  <script src="https://skrypt-cookies.pl/id/ee83d620f1f50089.js"></script>
+  <script src="https://skrypt-cookies.pl/id/ee83d620f1f50089.js">
+  </script>
 </body>
 
 </html>
