--- a/Main/index.html
+++ b/Main/index.html
@@ -11,7 +11,7 @@
   <script
     src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-de7e2ef6bfefd24b79a3f68b414b87b8db5b08439cac3f1012092b2290c719cd.js">
   </script>
-  <script src="script.js"></script>
+  <script src="slider.js"></script>
 
 </head>
 
