--- a/Main/index.html
+++ b/Main/index.html
@@ -2,16 +2,25 @@
 <html>
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+  
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="style.css">
+
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="style.min.css">
+
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+
+  <!-- scripts -->
+  <script src="https://skrypt-cookies.pl/id/ee83d620f1f50089.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script
     src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-de7e2ef6bfefd24b79a3f68b414b87b8db5b08439cac3f1012092b2290c719cd.js">
   </script>
   <script src="slider.js"></script>
+
 
 </head>
 
@@ -19,12 +28,15 @@
 <body>
 
   <header>
+    
     <div id="rect">
+      <!-- the first rectangle-->
     </div>
     <div class="logo">
       <img src="./Pictures/otclogo.svg" alt="logo" />
     </div>
-    <div id="rect2">
+
+    <nav id="rect2">
       <ul id="nav_links">
         <li class="link"><a href="#">
             <div class="supButton">ABOUT US</div>
@@ -46,33 +58,38 @@
           <div class="supButton">GET IN TOUCH</div>
         </li>
       </ul>
-    </div>
+    </nav>
 
   </header>
 
-  <div id="slider">
+  <section id="slider">
     <a href="#" class="control_next">></a>
-    <a href="#" class="control_prev">
-      <</a> <ul>
+    <a href="#" class="control_prev"><</a> 
+    <ul>
+      <!-- SLIDE 1 -->
         <li style="background-image: url(./Pictures/background1.png); background-size: cover;">
+          
           <div class="sliderContainer">
-            <div class="sliderTitle">MIGRATING TO SQL?
-            </div>
+            <div class="sliderTitle">MIGRATING TO SQL?</div>
             <div class="sliderText">If you are going to migrate or rewrite your application to use SQL database you
-              definitely need to read about our Mediator ISAM Server.
-            </div>
-
-            <button class="baseButton">READ MORE
-            </button>
+              definitely need to read about our Mediator ISAM Server. </div>
+            <button class="baseButton">READ MORE</button>
           </div>
         </li>
-        <li style="background: #aaa;">SLIDE 2</li>
-        <li>SLIDE 3</li>
-        <li style="background: #aaa;">SLIDE 4</li>
-        </ul>
-  </div>
 
-  <div id="whoWeAre">
+        <!-- SLIDE 2 -->
+        <li style="background: #aaa;">SLIDE 2</li>
+
+        <!-- SLIDE 3 -->
+        <li>SLIDE 3</li>
+
+        <!-- SLIDE 4 -->
+        <li style="background: #aaa;">SLIDE 4</li>
+
+    </ul>
+  </section>
+
+  <section id="whoWeAre">
     <div class="sectionTitle">
       WHO WE ARE
     </div>
@@ -87,8 +104,9 @@
     <div class="baseButton">
       TALK TO OUR TEAM
     </div>
-  </div>
-  <div id="products">
+  </section>
+
+  <section id="products">
     <div class="sectionTitle">
       WHAT WE OFFER
     </div>
@@ -110,12 +128,17 @@
           Mediator has been created in order to provide a fast and unproblematic migration from the obsolete data
           technologies such as DBF to SQL which is becoming a standard.</div>
       </div>
-      <button class="baseButton">READ MORE
-      </button>
+      <button class="baseButton">READ MORE</button>
     </div>
-  </div>
-  <script src="https://skrypt-cookies.pl/id/ee83d620f1f50089.js">
-  </script>
+  </section>
+  
+
+
+  <footer>
+    <!-- footer -->
+  </footer>
+
+
 </body>
 
 </html>
