adding contact section

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
 
@@ -36,9 +36,11 @@
     <div id="rect">
       <!-- the first rectangle-->
     </div>
-    <div class="logo">
-      <img src="./img/otclogo.svg" alt="logo" />
-    </div>
+    <a href="#top">
+      <div class="logo">
+        <img src="./img/otclogo.svg" alt="logo" />
+      </div>
+    </a>
     <!-- navbar-->
     <nav id="rect2">
       <ul id="nav_links">
@@ -70,6 +72,7 @@
     <a href="#" class="control_next">></a>
     <a href="#" class="control_prev">
       <</a> <ul>
+
         <!-- SLIDE 1 -->
         <li style="background-image: url(./img/background1.png); background-size: cover;">
 
@@ -133,6 +136,46 @@
           technologies such as DBF to SQL which is becoming a standard.</div>
       </div>
       <button class="baseButton">READ MORE</button>
+    </div>
+  </section>
+
+  <section id="getInTouch">
+    <div class="sectionTitle">
+      GET IN TOUCH
+    </div>
+    <div id="contactForm">
+      <div id ="contactText">
+        Got a question? We’d love to hear from you. Send us a message and we will repsond as soon as possible.
+      </div>
+
+      <div id ="contactName">
+        Name
+      </div>
+      
+      <input placeholder= "text" id ="formName">
+
+      <div id ="contactAddress">
+        E-mail address
+      </div>
+
+      <input placeholder= "text" id ="formAddress">
+
+      <div id ="contactTopic">
+        Topic
+      </div>
+
+      <input placeholder= "text" id ="formTopic">
+
+      <div id ="contactMessage">
+        Message
+      </div>
+
+      <input placeholder= "text" id ="formMessage">
+
+      <div id ="formButton">
+        SUBMIT
+      </div>
+
     </div>
   </section>
 
