in progress contact section

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/style.css">
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 
   <!-- scripts -->
@@ -144,35 +144,35 @@
       GET IN TOUCH
     </div>
     <div id="contactForm">
-      <div id ="contactText">
-        Got a question? We’d love to hear from you. Send us a message and we will repsond as soon as possible.
+      <div id="contactText">
+        Got a question? We’d love to hear from you. Send us a <br> message and we will repsond as soon as possible.
       </div>
 
-      <div id ="contactName">
+      <div id="formName">
         Name
       </div>
-      
-      <input placeholder= "text" id ="formName">
 
-      <div id ="contactAddress">
+      <input placeholder="" id="form">
+
+      <div id="formName">
         E-mail address
       </div>
 
-      <input placeholder= "text" id ="formAddress">
+      <input placeholder="" id="form">
 
-      <div id ="contactTopic">
+      <div id="formName">
         Topic
       </div>
 
-      <input placeholder= "text" id ="formTopic">
+      <input placeholder="" id="form">
 
-      <div id ="contactMessage">
+      <div id="formName">
         Message
       </div>
 
-      <input placeholder= "text" id ="formMessage">
+      <input placeholder="" id="form">
 
-      <div id ="formButton">
+      <div class="baseButton">
         SUBMIT
       </div>
 
