finished contact section, started working on news section

--- a/src/index.html
+++ b/src/index.html
@@ -152,25 +152,28 @@
         Name
       </div>
 
-      <input placeholder="" id="form">
+      <input placeholder="">
 
       <div id="formName">
         E-mail address
       </div>
 
-      <input placeholder="" id="form">
+      <input placeholder="">
 
       <div id="formName">
         Topic
       </div>
 
-      <input placeholder="" id="form">
+      <input placeholder="">
 
       <div id="formName">
-        Message
+        Message*
       </div>
 
-      <input placeholder="" id="form">
+      <textarea placeholder="" id="formMessage" maxlength="400"></textarea>
+
+      <div id="disclaimer">*The maximum number of characters: 400
+      </div>
 
       <div class="baseButton">
         SUBMIT
@@ -179,6 +182,20 @@
     </div>
   </section>
 
+  <section id="news">
+    <div class="sectionTitle">
+      LATEST NEWS AND INSIGHTS
+    </div>
+
+    <div id="allPosts">
+      <a href="#">
+        ALL POSTS >
+      </a>
+    </div>
+
+
+
+  </section>
 
 
   <footer>
@@ -187,6 +204,7 @@
 
   <script src="./js/products.js"></script>
   <script src="./js/slider.js"></script>
+  <script src="./js/contact.js"></script>
 </body>
 
 </html>
