--- a/src/index.html
+++ b/src/index.html
@@ -193,6 +193,28 @@
       </a>
     </div>
 
+    <div class ="containerNews">
+      <div class ="row1">
+        <img src="./img/winflector.png" alt="winflector" class="winflectorPhoto">
+        <div class="newsFirst">
+          New winflector site
+        </div>
+      </div>
+
+      <div class ="row2">
+        <div class="newsSecond">
+          Terminal v. 3.9.6.1
+
+        </div>
+
+        <div class="newsThird">
+          Mediator package - 4.3.3.1
+        </div>
+        
+      </div>
+      
+    </div>
+
 
 
   </section>
