wokring on news section

--- a/src/index.html
+++ b/src/index.html
@@ -196,18 +196,18 @@
     <div class ="containerNews">
       <div class ="row1">
         <img src="./img/winflector.png" alt="winflector" class="winflectorPhoto">
-        <div class="newsFirst">
+        <div class="news first">
           New winflector site
         </div>
       </div>
 
       <div class ="row2">
-        <div class="newsSecond">
+        <div class="news second">
           Terminal v. 3.9.6.1
 
         </div>
 
-        <div class="newsThird">
+        <div class="news third">
           Mediator package - 4.3.3.1
         </div>
         
