updating news section

--- a/src/index.html
+++ b/src/index.html
@@ -197,18 +197,45 @@
       <div class ="row1">
         <img src="./img/winflector.png" alt="winflector" class="winflectorPhoto">
         <div class="news first">
-          New winflector site
+          <span>MEDIATOR</span>
+          <div class="newsTitle">
+            Mediator package - 4.3.3.1
+          </div>
+          <div class="newsDesc">
+            We have released a new version of Mediator package - 4.3.3.1. 
+          </div>
+          <div class="newsButton">
+            LEARN MORE >
+          </div>
         </div>
       </div>
 
       <div class ="row2">
         <div class="news second">
-          Terminal v. 3.9.6.1
+          <span>MEDIATOR</span>
+          <div class="newsTitle">
+            Mediator package - 4.3.3.1
+          </div>
+          <div class="newsDesc">
+            We have released a new version of Mediator package - 4.3.3.1. 
+          </div>
+          <div class="newsButton">
+            LEARN MORE >
+          </div>
 
         </div>
 
         <div class="news third">
-          Mediator package - 4.3.3.1
+          <span>MEDIATOR</span>
+          <div class="newsTitle">
+            Mediator package - 4.3.3.1
+          </div>
+          <div class="newsDesc">
+            We have released a new version of Mediator package - 4.3.3.1. 
+          </div>
+          <div class="newsButton">
+            LEARN MORE >
+          </div>
         </div>
         
       </div>
