--- a/src/index.html
+++ b/src/index.html
@@ -243,11 +243,26 @@
     </div>
 
 
+    
 
   </section>
 
 
   <footer>
+    <hr width="100%" color="#D0D0D0">
+    <ul class="footerLinks">
+      <li>
+        © 2019 OTC S. A. All Rights Reserved.
+      </li>
+     
+      <li>
+        Sitemap
+      </li>
+
+      <li>
+        Privacy Policy
+      </li>
+    </ul>
     <!-- footer -->
   </footer>
 
