--- a/src/index.html
+++ b/src/index.html
@@ -258,7 +258,13 @@
         Privacy Policy
       </li>
     </ul>
-    <!-- footer -->
+    <div class="socialMedia">
+      <img id="fb" src="img/fb.svg">
+      <img id="linkedin" src="img/linkedin.svg">
+      <img id="twit" src="img/twitter.svg">
+      <img id="yt" src="img/yt.svg">
+    </div>
+    
   </footer>
 
   <script src="./js/products.js"></script>
