back to top button

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,8 @@
 			</nav>
 		</header>
 
+		<img src="./img/back2top.svg" onclick="topFunction()" id="b2t" />
+
 		<section id="slider">
 			<a href="#" class="control_next">></a>
 			<a href="#" class="control_prev"> <</a>
