finished products container

--- a/src/index.html
+++ b/src/index.html
@@ -147,27 +147,46 @@
 				<button class="baseButton">READ MORE</button>
 			</div>
 
-			<div class="productContainer" style = "display: none;" id="containerTerminal">
+			<div
+				class="productContainer"
+				style="display: none;"
+				id="containerTerminal"
+			>
 				<div class="productInfo">
-					<img class="containerPhoto" src="./img/mediator.png" />
+					<img class="containerPhoto" src="./img/terminal.png" />
 					<div class="productDescription">
-						Terminal software allows to run Clipper or Harbour (xHarbour) application in a terminal mode. An application working on a server reacts to a user's keystrokes sent from a terminal run on a different PC computer, retaining the ability to run peripheral devices (e.g. printers) connected to the terminal computer. The application also has an ability to call out procedures connected and executed on a user's terminal and to run a file transmission between the application and a terminal.
+						Terminal software allows to run Clipper or Harbour (xHarbour)
+						application in a terminal mode. An application working on a server
+						reacts to a user's keystrokes sent from a terminal run on a
+						different PC computer, retaining the ability to run peripheral
+						devices (e.g. printers) connected to the terminal computer. The
+						application also has an ability to call out procedures connected and
+						executed on a user's terminal and to run a file transmission between
+						the application and a terminal.
 					</div>
 				</div>
 				<button class="baseButton">READ MORE</button>
 			</div>
 
-			<div class="productContainer"  style = "display: none;" id="containerWinflector">
+			<div
+				class="productContainer"
+				style="display: none;"
+				id="containerWinflector"
+			>
 				<div class="productInfo">
-					<img class="containerPhoto" src="./img/mediator.png" />
+					<img class="containerPhoto" src="./img/winf.png" />
 					<div class="productDescription">
-						We offer one of the best virtualization software available on the market – Winflector. It allows easy, fast and effective applications sharing over a network, without excessive consumption of computing and network resources. If you are looking for an alternative for Remote Desktop Services (Windows Terminal Services), Citrix XenApp, VNC etc. – Winflector, one of the best low-cost and efficient virtualization software, is for you.
+						We offer one of the best virtualization software available on the
+						market – Winflector. It allows easy, fast and effective applications
+						sharing over a network, without excessive consumption of computing
+						and network resources. If you are looking for an alternative for
+						Remote Desktop Services (Windows Terminal Services), Citrix XenApp,
+						VNC etc. – Winflector, one of the best low-cost and efficient
+						virtualization software, is for you.
 					</div>
 				</div>
 				<button class="baseButton">READ MORE</button>
 			</div>
-
-			
 		</section>
 
 		<section id="getInTouch">
